<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_port"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:theme="@style/AppTheme.AppBarOverlay">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="157dp"
            android:src="@drawable/wegagenlogo">
        </ImageView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/moto" />
    </com.google.android.material.appbar.AppBarLayout>

<!--    <androidx.viewpager.widget.ViewPager-->
<!--        android:id="@+id/view_pager"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        app:layout_behavior="@string/appbar_scrolling_view_behavior" />-->
<!--    -->

   <GridLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:columnCount="3"
       android:layout_gravity="center"
       android:layout_marginTop="20dp"
       >
       <LinearLayout
           android:layout_height="wrap_content"
           android:layout_width="0dp"
           android:layout_columnWeight="1"
           android:layout_marginBottom="10dp"
           >
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical"
               android:layout_gravity="center_vertical">
               <LinearLayout
                   android:layout_width="@dimen/card_width"
                   android:layout_height="@dimen/card_heght"
                   android:orientation="vertical"
                   android:background="@drawable/button_border"
                   android:layout_gravity="center_horizontal"
                   android:padding="15dp"
                   >
                   <Button
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:background="@drawable/balance"
                       android:onClick="accountEnqueiry"
                       />
               </LinearLayout>
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="10dp"
                   android:layout_gravity="center_horizontal"
                   android:textAlignment="center"
                   android:textColor="#FFFFFFFF"
                   android:textSize="15sp"
                   android:text="@string/balance"/>
           </LinearLayout>

       </LinearLayout>
       <LinearLayout
           android:layout_height="wrap_content"
           android:layout_width="wrap_content"
           android:layout_columnWeight="1"
           android:layout_marginBottom="10dp"

           >
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical"
               >
               <LinearLayout
                   android:layout_width="@dimen/card_width"
                   android:layout_height="@dimen/card_heght"
                   android:background="@drawable/button_border"
                   android:layout_gravity="center_horizontal"
                   android:padding="15dp"
                   >
                   <Button
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:layout_gravity="center_horizontal|center_vertical"
                       android:background="@drawable/send"
                       />
               </LinearLayout>>

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center"
                   android:layout_marginTop="10dp"
                   android:textColor="#FFFFFFFF"
                   android:textSize="15sp"
                   android:text="@string/transfer" />
           </LinearLayout>

       </LinearLayout>
       <LinearLayout
           android:layout_height="wrap_content"
           android:layout_width="wrap_content"
           android:layout_columnWeight="1"
           android:layout_marginBottom="10dp"

           >
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical"
               android:layout_gravity="center_vertical">
               <LinearLayout
                   android:layout_width="@dimen/card_width"
                   android:layout_height="@dimen/card_heght"
                   android:background="@drawable/button_border"
                   android:layout_gravity="center_horizontal"
                   android:padding="15dp"

                   >
                   <Button
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:layout_gravity="center_horizontal|center_vertical"
                       android:background="@drawable/ben"
                       />
               </LinearLayout>
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="10dp"
                   android:layout_gravity="center"
                   android:textColor="#FFFFFFFF"
                   android:textSize="15sp"
                   android:text="@string/beneficiary"/>
           </LinearLayout>

       </LinearLayout>
       <LinearLayout
           android:layout_height="wrap_content"
           android:layout_width="wrap_content"
           android:layout_columnWeight="1"
           android:layout_marginBottom="10dp"

           >
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical"
               android:layout_gravity="center_vertical">
               <LinearLayout
                   android:layout_width="@dimen/card_width"
                   android:layout_height="@dimen/card_heght"
                   android:background="@drawable/button_border"
                   android:layout_gravity="center_horizontal"
                   android:padding="15dp"

                   >
                   <Button
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:layout_gravity="center_horizontal|center_vertical"
                       android:background="@drawable/check"
                       />
               </LinearLayout>
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="10dp"
                   android:layout_gravity="center"
                   android:textColor="#FFFFFFFF"
                   android:textSize="15sp"
                   android:text="@string/cheque"/>
           </LinearLayout>

       </LinearLayout>
       <LinearLayout
       android:layout_height="wrap_content"
       android:layout_width="wrap_content"
       android:layout_columnWeight="1"
       android:layout_marginBottom="10dp"

       >
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:layout_gravity="center_vertical">

           <LinearLayout
               android:layout_width="@dimen/card_width"
               android:layout_height="@dimen/card_heght"
               android:background="@drawable/button_border"
               android:layout_gravity="center_horizontal"
               android:padding="15dp"
               >
               <Button
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:layout_gravity="center_horizontal|center_vertical"
                   android:background="@drawable/bp"
                   />
           </LinearLayout>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="10dp"
               android:layout_gravity="center"
               android:textColor="#FFFFFFFF"
               android:textSize="15sp"
               android:text="@string/bill_payment"/>
       </LinearLayout>

   </LinearLayout>
       <LinearLayout
           android:layout_height="wrap_content"
           android:layout_width="wrap_content"
           android:layout_columnWeight="1"
           android:layout_marginBottom="10dp"

           >
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical"
               android:layout_gravity="center_vertical">
               <LinearLayout
                   android:layout_width="@dimen/card_width"
                   android:layout_height="@dimen/card_heght"
                   android:background="@drawable/button_border"
                   android:layout_gravity="center_horizontal"
                   android:padding="15dp"
                   >
                   <Button
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:layout_gravity="center_horizontal|center_vertical"
                       android:background="@drawable/et"
                       />
               </LinearLayout>
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="10dp"
                   android:layout_gravity="center"
                   android:textColor="#FFFFFFFF"
                   android:textSize="15sp"
                   android:text="@string/airline_payment"/>
           </LinearLayout>

       </LinearLayout>
       <LinearLayout
           android:layout_height="wrap_content"
           android:layout_width="wrap_content"
           android:layout_columnWeight="1"
           android:layout_marginBottom="10dp"

           >
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical"
               android:layout_gravity="center_vertical">
               <LinearLayout
                   android:layout_width="@dimen/card_width"
                   android:layout_height="@dimen/card_heght"
                   android:background="@drawable/button_border"
                   android:layout_gravity="center_horizontal"
                   android:padding="15dp"
                   >
                   <Button
                       android:layout_width="20dp"
                       android:layout_height="match_parent"
                       android:background="@drawable/info"
                       />
               </LinearLayout>
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="10dp"
                   android:layout_gravity="center"
                   android:textColor="#FFFFFFFF"
                   android:textSize="15sp"
                   android:text="@string/information"/>
           </LinearLayout>

       </LinearLayout>
       <LinearLayout
           android:layout_height="wrap_content"
           android:layout_width="wrap_content"
           android:layout_columnWeight="1"
           android:layout_marginBottom="10dp"

           >
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical"
               android:layout_gravity="center_vertical">
               <LinearLayout
                   android:layout_width="@dimen/card_width"
                   android:layout_height="@dimen/card_heght"
                   android:background="@drawable/button_border"
                   android:layout_gravity="center_horizontal"
                   android:padding="15dp"
                   >
                   <Button
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:layout_gravity="center_horizontal|center_vertical"
                       android:background="@drawable/admin"
                       />
               </LinearLayout>
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="10dp"
                   android:layout_gravity="center"
                   android:textColor="#FFFFFFFF"
                   android:textSize="15sp"
                   android:text="@string/admin"/>
           </LinearLayout>

       </LinearLayout>







   </GridLayout>


</LinearLayout>